﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.12...]
### 2018-01-18
	Changed: Default path visibility flipped to Process if Executable is defined and Partial otherwise
		Previously it was show Process if Path was not defined and Partial otherwise.
### 2018-01-17
	Changed: Process analysis improved
	Fixed: Weird time formatting in power configuration window.
### 2018-01-16
	Fixed: An error with process already exited, yet again.
	Changed: Process analysis is now much more comprehensive. Added `Record analysis´ experimental option.
	Fixed: Process state was not being tracked properly.
	Fixed: Weird output for scan frequency.
### 2018-01-15
	Changed: Process path acquisition improved.
	Fixed: An error with process already exited.
	Added: Beginnings of proper process analysis. Important for automatic process identification.
### 2018-01-14 PARTIALLY INCOMPATIBLE CONFIG
	Added: Watchlist now has basic search function. Just start typing and it'll highlight anything that has matching names.
	Changed: Path visibility File and Folder options removed.
		The IDs used now match Invalid and Partial respectively. No automatic conversion in place.
		Old partial matching will reset to default: automatic selection of process or partial.
	Changed: Smart path visibility should be "smarter".
### 2018-01-13
	Added: Option to show adjust latency per item. This is not saved between restarts.
	Added: Handler for unhandled exceptions. Should write to crash log.
	Internal: Process tracking changed. Bugs may have been introduced.
	Internal: A lot of error catching added. Some non-errors might be caught now.
### 2018-01-12
	Changed: Stacktraces should no longer include project directory as it was not useful.
		Note: It would be preferable if the generated .pbd didn't have it instead.
	Added: Modify latency display to the UI.